docs(kernel): 更新密码操作员设计文档和核心包迁移规范
- 添加 PasswordOperator 设计文档，支持密码修改和重置功能
- 更新 .gitignore 文件，忽略 Claude、Cursor、Agents 和 Workbuddy 相关目录
- 删除临时工作记忆文件 .workbuddy/memory/2026-08-17.md
- 添加核心模块包结构迁移的设计和实施计划文档
- 更新扩展运行时的实施计划文档，调整目录结构和职责划分